# password-manager

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.windsurf/: rules.md
apps/authentication/: admin.py  models.py  serializers.py  signals.py  tests.py  types.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/passwords/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/passwords/migrations/: 0001_initial.py  0002_passwordentry_custom_fields_passwordentry_source_and_more.py
config/: settings.py  urls.py
config/settings/: base.py  test.py
core/crypto/: encryption.py  exceptions.py
frontend/: .gitignore  AGENTS.md  README.md  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.css  app.html
frontend/src/lib/components/: AuditLogs.svelte  BiometricAuth.svelte  FoldersManager.svelte  ImportExport.svelte  Pagination.svelte  PasswordCard.svelte  PasswordForm.svelte  PasswordHistory.svelte  PasswordViewModal.svelte  ProfileSettings.svelte  SecurityDashboard.svelte  SharePassword.svelte  ThemeToggle.svelte  TwoFactorAuth.svelte
frontend/src/lib/components/layout/: BottomNav.svelte  Header.svelte  MainContent.svelte  Sidebar.svelte
frontend/src/lib/components/modals/: BottomSheet.svelte  SlidePanel.svelte
frontend/src/lib/services/: api.ts  crypto.ts
frontend/src/lib/stores/: auth.ts  pagination.ts  passwords.ts
frontend/src/lib/styles/: base.css  components.css  variables.css
frontend/src/lib/types/: auth.ts  password.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
plans/: ui-redesign-plan.md
